--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "firebase": "^10.1.0"
+    "firebase": "^10.1.0",
+    "node-cron": "^3.0.2"
   }
 }
