--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "firebase": "^10.1.0",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "sqlite3": "^5.1.6"
   }
 }
